# esp-matter

./: .clang-format  .codespellrc  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CHANGES.md  CMakeLists.txt  DEVELOPER_GUIDE.md  Kconfig  NOTICE  README.md  RELEASE_NOTES.md  RELEASE_NOTES.txt  SECURITY.md  SUPPORTED_DEVICE_TYPES.md  conftest.py  export.fish  export.sh  generate-include-files.cmake  idf_component.yml  install.sh  pytest.ini  requirements.txt  requirements_idf_v4.4.txt  submodule_or_idf_bump_pre_checks.sh
components/esp_matter/: CMakeLists.txt  Kconfig  esp_matter.c  esp_matter.h  esp_matter_attribute.cpp  esp_matter_attribute.h  esp_matter_attribute_bounds.cpp  esp_matter_attribute_bounds.h  esp_matter_attribute_utils.cpp  esp_matter_attribute_utils.h  esp_matter_client.cpp  esp_matter_client.h  esp_matter_cluster.cpp  esp_matter_cluster.h  esp_matter_command.cpp  esp_matter_command.h  esp_matter_core.cpp  esp_matter_core.h  esp_matter_dac.cpp  esp_matter_dac.h  esp_matter_dac_provider.cpp  esp_matter_dac_provider.h  esp_matter_delegate_callbacks.cpp  esp_matter_delegate_callbacks.h  esp_matter_endpoint.cpp  esp_matter_endpoint.h  esp_matter_event.cpp  esp_matter_event.h  esp_matter_feature.cpp  esp_matter_feature.h  esp_matter_icd_configuration.cpp  esp_matter_icd_configuration.h  esp_matter_identify.cpp  esp_matter_identify.h  esp_matter_mem.cpp  esp_matter_mem.h  esp_matter_ota.cpp  esp_matter_ota.h  esp_matter_providers.cpp  esp_matter_providers.h  (+8 more)
components/esp_matter/data_model/: administrator_commissioning_codegen_integration.cpp  attribute_exceptions.yaml  esp_matter_attribute.cpp  esp_matter_attribute.h  esp_matter_attribute_bounds.cpp  esp_matter_attribute_bounds.h  esp_matter_attribute_helpers.h  esp_matter_attribute_utils.cpp  esp_matter_attribute_utils.h  esp_matter_cluster.cpp  esp_matter_cluster.h  esp_matter_command.cpp  esp_matter_command.h  esp_matter_data_model.cpp  esp_matter_data_model.h  esp_matter_data_model_utils.cpp  esp_matter_delegate_callbacks.cpp  esp_matter_delegate_callbacks.h  esp_matter_endpoint.cpp  esp_matter_endpoint.h  esp_matter_event.cpp  esp_matter_event.h  esp_matter_feature.cpp  esp_matter_feature.h  esp_matter_macros.h  esp_matter_optional_attribute.cpp  esp_matter_optional_attribute.h  ota_provider_integration.cpp  software_diagnostics_codegen_integration.cpp
components/esp_matter/data_model_provider/: esp_matter_attr_data_buffer.cpp  esp_matter_attr_data_buffer.h  esp_matter_data_model_provider.cpp  esp_matter_data_model_provider.h  esp_matter_ember_stubs.cpp  esp_matter_plugin_server_init_callbacks.cpp
components/esp_matter/private/: esp_matter_cluster_revisions.h  esp_matter_nvs.cpp  esp_matter_nvs.h  singly_linked_list.h
components/esp_matter/test/: CMakeLists.txt  attribute_create_value_persistence.cpp  attribute_get_val.cpp  attribute_get_val_type.cpp  attribute_report.cpp  cluster_lifecycle_basic.cpp  cluster_lifecycle_common.h  cluster_lifecycle_managed_delegate.cpp  common.h  jsontlv.cpp  test_optional_clusters_validation.cpp
components/esp_matter/utils/: esp_matter_mem.cpp  esp_matter_mem.h  json_to_tlv.cpp  json_to_tlv.h
components/esp_matter/zap_common/: generate_zap_common_files.py
components/esp_matter_bridge/: CMakeLists.txt  Kconfig  esp_matter_bridge.cpp  esp_matter_bridge.h  esp_matter_console_bridge.cpp  esp_matter_console_bridge.h  nvs_key_allocator.h
components/esp_matter_console/: CMakeLists.txt  Kconfig  esp_matter_console.cpp  esp_matter_console.h  esp_matter_console_attribute.cpp  esp_matter_console_diagnostics.cpp  esp_matter_console_factory_reset.cpp  esp_matter_console_otcli.cpp  esp_matter_console_udc.cpp  esp_matter_console_wifi.cpp
components/esp_matter_controller/: CMakeLists.txt  Kconfig  esp_matter_attestation_trust_store.cpp  esp_matter_attestation_trust_store.h  esp_matter_commissioner.cpp  esp_matter_commissioner.h  esp_matter_controller_cluster_command.cpp  esp_matter_controller_cluster_command.h  esp_matter_controller_console.cpp  esp_matter_controller_group_settings.cpp  esp_matter_controller_group_settings.h  esp_matter_controller_pairing_command.cpp  esp_matter_controller_pairing_command.h  esp_matter_controller_read_command.cpp  esp_matter_controller_read_command.h  esp_matter_controller_subscribe_command.cpp  esp_matter_controller_subscribe_command.h  esp_matter_controller_utils.cpp  esp_matter_controller_utils.h  esp_matter_controller_write_command.cpp  esp_matter_controller_write_command.h  idf_component.yml
components/esp_matter_controller/attestation_store/: esp_matter_attestation_trust_store.cpp  esp_matter_attestation_trust_store.h
components/esp_matter_controller/attestation_verification/: esp_matter_attestation_trust_store.cpp  esp_matter_attestation_trust_store.h  esp_matter_da_revocation_check.cpp  esp_matter_da_revocation_check.h  esp_matter_da_revocation_delegate.cpp  esp_matter_da_revocation_delegate.h
components/esp_matter_controller/commands/: esp_matter_controller_cluster_command.cpp  esp_matter_controller_cluster_command.h  esp_matter_controller_commissioning_window_opener.cpp  esp_matter_controller_commissioning_window_opener.h  esp_matter_controller_pairing_command.cpp  esp_matter_controller_pairing_command.h  esp_matter_controller_read_command.h  (+5 more)
components/esp_matter_ota_provider/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/esp_matter_rainmaker/: CMakeLists.txt  esp_matter_rainmaker.cpp  esp_matter_rainmaker.h  rainmaker.xml  specification.md
components/esp_matter_thread_br/: CMakeLists.txt  Kconfig  README.md  esp_matter_thread_br_cluster.cpp  esp_matter_thread_br_cluster.h  esp_matter_thread_br_console.cpp  esp_matter_thread_br_console.h  esp_matter_thread_br_launcher.cpp  esp_matter_thread_br_launcher.h  idf_component.yml  thread_br.xml
components/led_driver/: CMakeLists.txt
device_hal/button_driver/: CMakeLists.txt  idf_component.yml
device_hal/device/: CMakeLists.txt
device_hal/led_driver/: CMakeLists.txt  idf_component.yml
device_hal/light_driver/: CMakeLists.txt
(+1585 files in other folders)
